kubernetes/apps/authentik/authentik/app/postgresql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-db
spec:
  selector:
    app.kubernetes.io/name: authentik-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-db
spec:
  serviceName: authentik-db
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-db
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-db
    spec:
      containers:
        - name: postgresql
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn-production-v1
        resources:
          requests:
            storage: 2Gi
