kubernetes/apps/authentik/authentik/app/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-redis-master
spec:
  selector:
    app.kubernetes.io/name: authentik-redis
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: authentik-redis
spec:
  serviceName: authentik-redis-master
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authentik-redis
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authentik-redis
    spec:
      containers:
        - name: redis
          image: redis:8-alpine
          command: ["redis-server", "--save", "60", "1", "--loglevel", "warning"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn-production-v1
        resources:
          requests:
            storage: 1Gi
