kubernetes/apps/authentik/authentik/app/httproute-external.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
# Authentik public — auth endpoints only, no admin/API
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-external
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - authentik.linderis.fr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /application/o/
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /if/flow/
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /static/
      backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
