kubernetes/apps/authentik/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Authentik"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/homarr-labs/dashboard-icons/svg/authentik.svg"
    gethomepage.dev/href: "https://authentik.${DOMAIN}"
  name: authentik
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - authentik.${DOMAIN}
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: authentik
          port: 80
